# echo

./: .env.example  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
bot/: bot.py
helpers/: gpt4all_helper.py
